<resources>
    <string name="app_name">IM</string>
    <string name="welcome_back">欢迎回来</string>
    <string name="login_to_continue">马上登录</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="sign_in">登录</string>
    <string name="create_new_account">新用户注册</string>
    <string name="add_image">选择头像</string>
    <string name="name">昵称</string>
    <string name="confirm_password">确认密码</string>
    <string name="sign_up">注册</string>
    <string name="type_a_message">输入信息</string>
    <string name="next">下一步</string>
    <string name="online">在线</string>
    <string name="contacts">联系人</string>
    <string name="newFriends">新朋友</string>
    <string name="UpdatePassword">修改密码</string>
    <string name="SignOut">退出登录</string>
    <string name="Cancel_account">注销账户</string>
    <string name="EnterPassword">请输入密码</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="new_message">新消息</string>
    <string name="send">发送</string>
    <string name="Group_Chat">群聊</string>
    <string name="friend_request">好友申请</string>
    <string name="send_code">发送验证码</string>
    <string name="password_rules">8-16，包含大小写,数字</string>
    <string name="voice_message">按住说话</string>
    <string name="normal">按住 说话</string>
    <string name="recording">松开 结束</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>
    <string name="toolong">录音时间过长</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="sure">确定</string>
    <string name="back">取消</string>
    <string name="settings">设置</string>
    <string name="CheckUp">检查更新</string>
</resources>