<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:yun="http://com.yun.android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_18sdp"
        app:layout_constraintTop_toTopOf="parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_icon"
            android:scaleType="centerCrop"
            android:tint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius="@dimen/_8sdp" />

        <TextView
            android:id="@+id/UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:paddingTop="@dimen/_12sdp"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintStart_toEndOf="@id/imageProfile"
            app:layout_constraintTop_toTopOf="@id/imageProfile" />

        <TextView
            android:id="@+id/UserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:paddingTop="@dimen/_8sdp"
            app:layout_constraintStart_toEndOf="@id/imageProfile"
            app:layout_constraintTop_toBottomOf="@id/UserName" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_22sdp"
            app:layout_constraintTop_toBottomOf="@id/imageProfile">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/ChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_icon"
                    android:backgroundTint="@color/white"
                    android:gravity="center_vertical"
                    android:text="@string/UpdatePassword"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/SignOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/background_icon"
                    android:backgroundTint="@color/white"
                    android:gravity="center_vertical"
                    android:text="@string/SignOut"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/Cancel_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/background_icon"
                    android:backgroundTint="@color/white"
                    android:gravity="center_vertical"
                    android:text="@string/Cancel_account"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/Settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/background_icon"
                    android:backgroundTint="@color/white"
                    android:gravity="center_vertical"
                    android:text="@string/settings"
                    android:textColor="@color/black" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.yun.IM.view.layout
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_account"
        android:padding="@dimen/_24sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.7"
        yun:endtime="500"
        yun:showtime="500">

        <EditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/background_account_input"
            android:hint="@string/old_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@drawable/background_account_input"
            android:hint="@string/new_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toBottomOf="@id/old_password" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@drawable/background_account_input"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toBottomOf="@id/new_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_password" />
    </com.yun.IM.view.layout>

    <ScrollView
        android:id="@+id/settingsPanel"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:background="@drawable/settings_background"
        android:overScrollMode="never"
        android:paddingTop="@dimen/_14sdp"
        android:scrollbars="none"
        android:alpha="0"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/CheckUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_icon"
                android:backgroundTint="@color/secondary_text"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/CheckUp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>